Fixed layout issues and added new UI features;mobile responsiveness WIP

--- a/css/styles.css
+++ b/css/styles.css
@@ -367,7 +367,7 @@ nav{
   }
 }
 
--------------------play video page------
+-------------------playvideopage------------------
 
 .play-container{
   padding-left: 2%;
@@ -401,6 +401,64 @@ nav{
   flex-basis:49%;
 }
 .play-video .tags{
-  color:#0000ff;
+  color:#000000;
   font-size: 13px;
+}
+.play-video h3{
+  font-weight: 600;
+  font-size: 22px;
+}
+.play-video .play-video-info{
+display: flex;
+align-items:center;
+justify-content: space-between;
+flex-wrap: wrap;
+margin-top:10px;
+font-size:14px;
+color:#5a5a5a;
+}
+.play-video .play-video-info a img{
+  width:20px;
+  margin-right: 8px;
+}
+.play-video .play-video-info a{
+  display:inline-flex;
+  align-items:center;
+  margin-left:15px;
+}
+.play-video hr{
+  border:0;
+  height:1px;
+  background:#ccc;
+}
+.publisher{
+  display:flex;
+  align-items: center;
+  margin-top:20px;
+}
+.publisher div{
+  flex:1;
+  line-height:18px;
+}
+.publisher img{
+  width:40px;
+  border-radius:50%;
+  margin-right:15px;
+}
+.publisher div p{
+  color:#000;
+  font-weight:600;
+  font-size: 18px;
+}
+.publisher div span{
+  font-size: 13px;
+  color:#5a5a5a;
+}
+.publisher button{
+  background:red;
+  color:#fff;
+  padding:8px 30px;
+  border:0;
+  outline:0;
+  border-radius:4px;
 }
